@@ -4,6 +4,6 @@
     <mat-option value="sales">Sales</mat-option>
     <mat-option value="pageview">Pageview</mat-option>
     <mat-option value="delivery">Delivery</mat-option>
-    <!-- <mat-option value="invoice">Invoice</mat-option> -->
+    <mat-option value="invoice">Invoice</mat-option>
 </mat-select>
 <router-outlet></router-outlet>
