@@ -1,0 +1,65 @@
+<div class="invoice-figure-container">
+    <div class="row no-gutters mb-lg-4 mb-3">
+        <div class="col-lg-3 col">
+            <div class="invoice-figure invoice-figure__today">
+                <h4 class="h6 mb-0 font-weight-normal" style="min-width: 200px">
+                    Total monthly invoice:
+                </h4>
+                <p class="invoice-figure__today__figure" #monthlyInvoice>{{ invoice.totalMonthlyInvoice }}</p>
+                <h4 class="h6 mb-0 font-weight-normal" style="min-width: 200px">
+                    Last month invoice:
+                </h4>
+                <p class="font-9 p-2 mb-0 text-right">{{invoice.lastMonthInvoice }}</p>
+                <h4 class="h6 mb-0 font-weight-normal" style="min-width: 200px">
+                    Last updated:
+                </h4>
+                <p class="font-9 p-2 mb-0 text-right">{{ moment(updatedDate).format('llll') }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="row no-gutters invoice-figure mb-3">
+        <h4 class="h5 font-weight-normal mb-3">Invoice</h4>
+        <div class="bg-white p-3">
+            <div class="row no-gutters mb-3">
+                <div class="mb-2 d-inline-block col-lg-auto">
+                    <label class="invoice-figure__label d-block d-lg-inline-block">From Date: </label>
+                    <input (click)="fromPicker.open()" class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="fromDate" [matDatepicker]="fromPicker" [min]="last60dayDate" [max]="maxDate" />
+                    <mat-datepicker #fromPicker startView="month" [startAt]="fromDate" (opened)="openCalendar()"></mat-datepicker>
+                </div>
+                <div class="mb-2 d-inline-block col-lg-auto">
+                    <label class="invoice-figure__label d-block d-lg-inline-block">To Date: </label>
+                    <input (click)="toPicker.open()" class="form-control form-control-sm d-inline-block" [ngStyle]="{'max-width': isMobileSize? '100%' : '200px'}" [(ngModel)]="toDate" [matDatepicker]="toPicker" [min]="fromDate" [max]="maxDate" />
+                    <mat-datepicker #toPicker startView="month" [startAt]="toDate" (opened)="openCalendar()"></mat-datepicker>
+                </div>
+                <div class="d-flex align-items-center col-lg-auto">
+                    <button class="btn btn-sm btn-controller" [disabled]="invoiceLoading.isRunning()" (click)="getInvoiceBetweenDates()">Search</button>
+                </div>
+                <!-- <div class="float-right col text-right">
+                    <span class='fas fa-file-export mr-2'></span>
+                    <span>Export as</span>
+                </div> -->
+            </div>
+            <div *ngIf="invoiceLoading.isRunning()" class="d-flex justify-content-center align-items-center" style="height: 300px">
+                <ws-spinner [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>
+            </div>
+            <div *ngIf="!invoiceLoading.isRunning()" class="row no-gutters">
+                <div class="invoice-figure__analyzer">
+                    <canvas baseChart [datasets]="invoiceChart.data" [labels]="invoiceChart.labels" [legend]="invoiceChart.legend" [options]="invoiceChart.options" [chartType]="invoiceChart.chartType" [colors]="invoiceChart.colors"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row no-gutters invoice-figure">
+        <h4 class="h5 font-weight-normal mb-3">Cumulative invoice</h4>
+        <div class="bg-white p-3">
+            <div *ngIf="cumulativeLoading.isRunning()" class="d-flex justify-content-center align-items-center" style="height: 300px">
+                <ws-spinner [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>
+            </div>
+            <div *ngIf="!cumulativeLoading.isRunning()" class="row no-gutters">
+                <div class="invoice-figure__analyzer">
+                    <canvas baseChart [datasets]="cumulativeChart.data" [labels]="cumulativeChart.labels" [legend]="cumulativeChart.legend" [options]="cumulativeChart.options" [chartType]="cumulativeChart.chartType" [colors]="invoiceChart.colors"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
